egzamin/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend-deployment
  labels:
    app: my-backend
    type: backend
spec:
  template:
    metadata:
      name: my-backend-pod
      labels:
        app: my-backend
        type: backend
    spec:
      containers:
        - name: my-backend-container
          image: artgoleb/backend
  replicas: 3
  selector:
    matchLabels:
      app: my-backend
      type: backend
